<resources>
    <string name="app_name">DTN</string>
    <string name="action_msgTime">Time</string>
    <string name="OneScenarioText">Start Scenario</string>
    <string name="title_activity_one_scenario">OneScenario</string>
    <string name="nodeType">Static Node</string>
    <string name="featureSet">• Only 1 Connection At Once\n• Source/Destination\n</string>
    <string name="btConnectFail">No Device Found!</string>
    <string name="btConnectSuccess">Connected To:</string>
    <string name="peersNotFound">No Peers Found!</string>
    <string name="peersInVicinity">Peers In Vicinity:</string>
    <string name="copyright">© Abhishanth Padarthy | Vineeth Penugonda</string>
    <string name="sendTxT">Send Text</string>
    <string name="sendImage">Send Image</string>
    <string name="showImage">Image</string>
    <string name="connReconnect">Connection Reconnect</string>
    <string name="pairingTime">Pairing Time</string>
    <string name="delay">Delay</string>
    <string name="intercontacttime">Inter Contact Time</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="currentStatus">Current Status</string>
    <string name="receivedMessage">Received Message</string>
    <string name="checkingBandwidth">Checking Bandwidth Now</string>
    <string name="throughput">Throughput</string>\
    <string name="enterMessage">Enter Your Message Here</string>
    <string name="characterLimitWarning">You can send unlimited characters per message</string>
    <string name="send">Send</string>
    <string name="MsgPacketLoss">Message Packet Loss</string>
    <string name="BWPacketLoss">Bandwidth Packet Loss</string>
    <string name="speed">Speed</string>
    <string name="MeterPerSecond">m/s</string>
    <string name="DateAndTime">Date and Time</string>
    <string name="InterContactTime">Inter Contact Time</string>
    <string name="ListenToAudio">Listen To Audio</string>
    <string name="MinimumBWSpeed">0</string>
    <string name="MaximumBWSpeed">300</string>

    <string name="AudioStartTime">00:00</string>
    <string name="AudioCurrentStatus">Select The Play Button To Play \n\t\tThe Received Audio File</string>
    <string name="closeAudioPopup">X</string>
    <string name="customDesignText">Custom Audio Player Design By Vineeth Penugonda</string>
    <string name="AudioPlayerOverlay">DTN AUDIO</string>
    <string name="playAudioTxt">Play Audio</string>

    <string name="title_activity_image_viewer">ImageViewer</string>
    <string name="dummy_button">Refresh</string>
    <string name="dummy_content">IMAGE\nVIEWER</string>
</resources>
