<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.iologic.apps.dtn.MainActivity">
    <item
        android:id="@+id/action_connectionReconnect"
        android:icon="@drawable/ic_connection_reconnect"
        android:orderInCategory="100"
        android:title="@string/connReconnect"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_showImage"
        android:icon="@drawable/ic_image_white"
        android:orderInCategory="101"
        android:title="@string/showImage"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_listenToAudio"
        android:icon="@drawable/ic_listen_to_audio"
        android:orderInCategory="102"
        android:title="@string/ListenToAudio"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_msgTime"
        android:icon="@drawable/ic_time_white"
        android:orderInCategory="103"
        android:title="@string/action_msgTime"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_intercontactTime"
        android:icon="@drawable/ic_inter_contact_time"
        android:orderInCategory="104"
        android:title="Inter Contact Time"
        app:showAsAction="always" />

</menu>
