<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.iologic.apps.dtn.OneScenario"
    tools:showIn="@layout/activity_one_scenario">


    <TextView
        android:id="@+id/btStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/btConnectFail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peerStatus" />

    <TextView
        android:id="@+id/peerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:text="@string/peersNotFound"
        app:layout_constraintStart_toStartOf="@+id/btStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:indicatorColor="#5EFDDA"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <LinearLayout
        android:id="@+id/dataSelLinearLayout"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/messageBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterMessage"
                android:inputType="textPersonName"
                android:maxLength="10" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <ImageButton
            android:id="@+id/sendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_send_message" />

        <ImageButton
            android:id="@+id/sendImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_image_select"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataSelLinearLayout">

        <TextView
            android:id="@+id/messageStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/receivedMessage"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pairingTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pairingTime"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#FF00FF00"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/currentStatus"/>

            <TextView
                android:id="@+id/interContactTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/intercontacttime"
                android:textAlignment="center"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#FF00FF00"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/currentStatus"/>


            <TextView
                android:id="@+id/delay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/delay"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bandwidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bandwidth"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/checkBandwidthStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_purple" />

            <ProgressBar
                android:id="@+id/sendBWProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="16"
                android:progressBackgroundTint="#005166"
                android:progressTint="#4DFF00"
                android:visibility="gone" />


        </LinearLayout>

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/speed"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BWPacketLoss"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/BWPacketLoss"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/MsgPacketLoss"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/MsgPacketLoss"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bytesSent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="center"
                android:text="No. of bytes sent"
                android:textColor="@android:color/holo_purple"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bytesReceived"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="center"
                android:text="No. of bytes received"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/currentStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:text="@string/currentStatus"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>